--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="progress_bar_max_height">15dip</dimen>
     <dimen name="category_item_answered_question_margin_top">0dp</dimen>
     <dimen name="question_number_text_size">40sp</dimen>
+    <dimen name="cat_item_price_width">70dp</dimen>
 </resources>
