--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="top_offset">1dip</dimen>
     <dimen name="progress_bar_max_height">14dip</dimen>
     <dimen name="question_number_text_size">40sp</dimen>
+    <dimen name="cat_item_price_width">65dp</dimen>
 </resources>
