--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="top_offset">1dip</dimen>
     <dimen name="progress_bar_max_height">15dip</dimen>
     <dimen name="category_item_answered_question_margin_top">10dp</dimen>
-    <dimen name="main_menu_buttons_width">70dp</dimen>
+    <dimen name="main_menu_buttons_width">100dp</dimen>
+    <dimen name="cat_item_price_width">120dp</dimen>
 </resources>
