--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,6 @@
     <dimen name="category_item_answered_question_margin_top">0dp</dimen>
     <dimen name="social_share_button_size">40dp</dimen>
     <dimen name="question_number_text_size">40sp</dimen>
+    <dimen name="main_menu_buttons_width">70dp</dimen>
+    <dimen name="cat_item_price_width">75dp</dimen>
 </resources>
