--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,8 +4,8 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
 
-        <item name="android:colorPrimary">@color/placeholder</item>
-        <item name="android:colorPrimaryDark">@color/dark</item>
+        <item name="android:colorPrimary">#4783D0</item>
+        <item name="android:colorPrimaryDark">#000000</item>
         <item name="android:colorAccent">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColor">@color/white</item>
