Recycle adapter for category list

--- a/app/src/main/res/layout/quiz_categories_layout.xml
+++ b/app/src/main/res/layout/quiz_categories_layout.xml
@@ -78,6 +78,7 @@
             android:scaleType="centerCrop"
             />
 
+
         <ListView
             android:id="@android:id/list"
             android:layout_width="fill_parent"
@@ -86,7 +87,15 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="0dip"
             android:listSelector="@android:color/transparent"
+            android:visibility="gone"
             android:textFilterEnabled="true"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/catsList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
 
         <LinearLayout
             android:id="@android:id/empty"
