--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="progress_bar_max_height">14dip</dimen>
     <dimen name="question_number_text_size">35sp</dimen>
     <dimen name="quiz_points_margin">20dp</dimen>
+    <dimen name="cat_item_price_width">55dp</dimen>
+    <dimen name="cat_name_text_size">13sp</dimen>
+    <dimen name="cat_desc_text_size">11sp</dimen>
 </resources>
