--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,6 @@
     <dimen name="question_number_text_size">40sp</dimen>
     <dimen name="main_menu_buttons_width">70dp</dimen>
     <dimen name="cat_item_price_width">75dp</dimen>
+    <dimen name="cat_name_text_size">18sp</dimen>
+    <dimen name="cat_desc_text_size">14sp</dimen>
 </resources>
