--- a/app/src/main/res/values-ldpi/dimens.xml
+++ b/app/src/main/res/values-ldpi/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="progress_bar_max_height">14dip</dimen>
     <dimen name="question_number_text_size">30sp</dimen>
     <dimen name="quiz_points_margin">20dp</dimen>
+    <dimen name="cat_name_text_size">14sp</dimen>
+    <dimen name="cat_desc_text_size">10sp</dimen>
+    <dimen name="category_layout_title_text_size">13sp</dimen>
 </resources>
