--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="cat_item_price_width">55dp</dimen>
     <dimen name="cat_name_text_size">13sp</dimen>
     <dimen name="cat_desc_text_size">11sp</dimen>
+    <dimen name="category_layout_title_text_size">10sp</dimen>
 </resources>
