--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <dimen name="quiz_points_margin">35dp</dimen>
     <dimen name="quiz_points_top_margin">100dp</dimen>
-    <dimen name="quiz_option_buttons_margin_bottom">70dp</dimen>
+    <dimen name="quiz_option_buttons_margin_bottom">90dp</dimen>
     <dimen name="quiz_option_buttons_height">60dp</dimen>
     <dimen name="quiz_option_buttons_width">140dp</dimen>
     <dimen name="quiz_points_width">120dp</dimen>
@@ -30,4 +30,8 @@
     <dimen name="cat_item_price_width">75dp</dimen>
     <dimen name="cat_name_text_size">18sp</dimen>
     <dimen name="cat_desc_text_size">14sp</dimen>
+    <dimen name="answered_questions_textsize">17sp</dimen>
+    <dimen name="category_layout_title_text_size">20sp</dimen>
+    <dimen name="quiz_skip_bottom_margin">70dp</dimen>
+    <dimen name="settings_item_name_text_size">16sp</dimen>
 </resources>
