--- a/app/src/main/res/layout/fragment_knowledge.xml
+++ b/app/src/main/res/layout/fragment_knowledge.xml
@@ -2,92 +2,95 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="@color/knowledge_transparent_bg"
              tools:context="com.almadev.znaniesila.fragments.KnowledgeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:scrollbars="none"
-        android:layout_height="fill_parent"
-        android:background="@color/knowledge_transparent_bg">
+        android:layout_height="fill_parent">
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/plate_txt"/>
 
-            <ImageView
-                android:layout_alignParentTop="true"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/plate_txt"/>
+        <ScrollView
+            android:id="@+id/story_container"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="220dp"
+            android:scrollbars="none"
+            >
 
             <TextView
                 android:id="@+id/story_text"
-                android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="220dp"
-                android:layout_marginTop="40dp"
                 android:gravity="center"
+                android:minHeight="220dp"
                 android:text=""
                 android:textColor="@color/white"
                 android:textSize="16sp"/>
+        </ScrollView>
+
+        <ImageView
+            android:id="@+id/story_img"
+            android:layout_width="wrap_content"
+            android:layout_height="220dp"
+            android:layout_below="@id/story_container"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="0dp"
+            android:scaleType="centerInside"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="0dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/story_img"
-                android:layout_below="@id/story_text"
-                android:layout_width="wrap_content"
-                android:scaleType="centerInside"
-                android:layout_centerHorizontal="true"
-                android:layout_height="220dp"
-                android:layout_marginTop="0dp"/>
+                android:id="@+id/share_vk"
+                android:layout_width="@dimen/social_share_button_size"
+                android:layout_height="@dimen/social_share_button_size"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/vk_logo"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="0dp"
-                android:layout_alignParentBottom="true"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="@dimen/social_share_button_size"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/share_divider"/>
 
-                <ImageView
-                    android:id="@+id/share_vk"
-                    android:layout_width="@dimen/social_share_button_size"
-                    android:layout_height="@dimen/social_share_button_size"
-                    android:layout_marginRight="25dp"
-                    android:src="@drawable/vk_logo"/>
+            <ImageView
+                android:id="@+id/share_fb"
+                android:layout_width="@dimen/social_share_button_size"
+                android:layout_height="@dimen/social_share_button_size"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/fb_logo"/>
 
-                <ImageView
-                    android:layout_width="1dp"
-                    android:layout_height="@dimen/social_share_button_size"
-                    android:layout_marginRight="25dp"
-                    android:src="@drawable/share_divider"/>
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="@dimen/social_share_button_size"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/share_divider"/>
 
-                <ImageView
-                    android:id="@+id/share_fb"
-                    android:layout_width="@dimen/social_share_button_size"
-                    android:layout_height="@dimen/social_share_button_size"
-                    android:layout_marginRight="25dp"
-                    android:src="@drawable/fb_logo"/>
+            <ImageView
+                android:id="@+id/share_ok"
+                android:layout_width="@dimen/social_share_button_size"
+                android:layout_height="@dimen/social_share_button_size"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/ok_logo"/>
 
-                <ImageView
-                    android:layout_width="1dp"
-                    android:layout_height="@dimen/social_share_button_size"
-                    android:layout_marginRight="25dp"
-                    android:src="@drawable/share_divider"/>
-
-                <ImageView
-                    android:id="@+id/share_ok"
-                    android:layout_width="@dimen/social_share_button_size"
-                    android:layout_height="@dimen/social_share_button_size"
-                    android:layout_marginRight="25dp"
-                    android:src="@drawable/ok_logo"/>
-
-            </LinearLayout>
-        </RelativeLayout>
-    </ScrollView>
+        </LinearLayout>
+    </RelativeLayout>
 </FrameLayout>
