--- a/app/src/main/res/layout/knowledge_tab.xml
+++ b/app/src/main/res/layout/knowledge_tab.xml
@@ -5,7 +5,7 @@
 
     <ImageView
         android:id="@+id/hexagon"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="60dp"
         android:src="@drawable/hexagon_gold"
         android:scaleType="centerInside"
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:id="@+id/psts_tab_title"
         android:layout_gravity="center"
-        android:text="01"
-        android:textSize="20sp"
+        android:text="010"
+        android:textSize="18sp"
         android:gravity="center"
         android:visibility="invisible"
         android:singleLine="true"
@@ -26,8 +26,8 @@
         android:layout_width="match_parent"
         android:id="@+id/tab_title"
         android:layout_gravity="center"
-        android:text="01"
-        android:textSize="20sp"
+        android:text="010"
+        android:textSize="18sp"
         android:gravity="center"
         android:singleLine="true"
         android:textColor="@color/white"
